@@ -1,3 +1,8 @@
+Sun Apr 04 17:19:08 2004  George Lebl <jirka@5z.com>
+
+	* src/eval.c: when 'i' is used uninitialized then suggest using '1i'
+	  instead
+
 Sun Apr 04 16:35:38 2004  George Lebl <jirka@5z.com>
 
 	* src/genius.c, src/gnome-genius.c: Make the console version be
